--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   google_sign_in: ^4.5.5
   flutter_icons: ^1.1.0
-  percent_indicator: ^2.1.8
+#  percent_indicator: ^2.1.8
   cached_network_image: ^2.3.2+1
   flutter_spinkit: ^4.1.2+1
   cloud_firestore: ^0.14.2
